@@ -1,3 +1,12 @@
+2008-08-28  kitone  <kitone@gna.org>
+
+	* src/actions/DocumentManagement.cc:
+	* src/gui/ComboBoxEncoding.cc:
+	* src/gui/ComboBoxEncoding.h:
+	* src/gui/DialogFileChooser.cc:
+	* src/gui/DialogFileChooser.h:
+	Improve the save dialog by selecting default values from document.
+
 2008-08-27  kitone  <kitone@gna.org>
 
 	* src/Error.h:
